--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,15 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . 2>&1 | tee -a builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
 after_script:
-- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-report.py builds/build
 - rm -rf builds/build/sources
 - rm -rf builds/build/build.state.yaml
-- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
+- PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
     secure: LBwqEgDNzt/pGmCB9U45hFh4DBQtb8J2UeAbOypk4iLm6WExB3f2+DGVl7JEqNgWyObvROPH7/S49zBiZKECmqH6PX1Rr7CR9tFCcYZvj7tkwk1j6tZ9xd+RArrhYVHod5UD5AIOHDBKk4qZcpDhklEPC0S4kmjhMMq4a3e+Y7Y=
